force-app/main/default/objects/Material_Item__c/Material_Item__c.object-meta.xml
<CustomObject>
    <label>Material Item</label>
    <nameField>
        <label>Material Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Material Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>