force-app/main/default/objects/Material_Item__c/fields/B_W_Click_Charge__c.field-meta.xml
<CustomField>
    <fullName>B_W_Click_Charge__c</fullName>
    <label>B&amp;W Click Charge</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>