force-app/main/default/objects/Material_Item__c/fields/Case_Pack__c.field-meta.xml
<CustomField>
    <fullName>Case_Pack__c</fullName>
    <label>Case Pack</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>