force-app/main/default/objects/Material_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Echo Media</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Print Shop</fullName>
            </value>
            <value>
                <fullName>Vinyl</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>