force-app/main/default/objects/Material_Item__c/fields/Color_Click_Charge__c.field-meta.xml
<CustomField>
    <fullName>Color_Click_Charge__c</fullName>
    <label>Color Click Charge</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>