force-app/main/default/objects/Material_Item__c/fields/Creative_Brief_Template__c.field-meta.xml
<CustomField>
    <fullName>Creative_Brief_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creative Brief Template</label>
    <referenceTo>Specification_Template__c</referenceTo>
    <relationshipLabel>Material Items</relationshipLabel>
    <relationshipName>Material_Items</relationshipName>
    <type>Lookup</type>
</CustomField>