force-app/main/default/objects/Material_Item__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Code</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The GL Department has been changed for this GL Code in Admin. Please re-select the GL Department and GL Code.</errorMessage>
        <filterItems>
            <field>GL_Code__c.GL_Department__c</field>
            <operation>equals</operation>
            <valueField>$Source.GL_Department__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>GL_Code__c</referenceTo>
    <relationshipLabel>Material Items</relationshipLabel>
    <relationshipName>Material_Items</relationshipName>
    <type>Lookup</type>
</CustomField>