force-app/main/default/objects/Material_Item__c/fields/Labor_Charge__c.field-meta.xml
<CustomField>
    <fullName>Labor_Charge__c</fullName>
    <label>Labor Charge</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>