force-app/main/default/objects/Material_Item__c/fields/Material_Media_Type__c.field-meta.xml
<CustomField>
    <fullName>Material_Media_Type__c</fullName>
    <label>Material Media Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Magnetic</fullName>
            </value>
            <value>
                <fullName>Ink</fullName>
            </value>
            <value>
                <fullName>Vinyl</fullName>
            </value>
            <value>
                <fullName>Polyester</fullName>
            </value>
            <value>
                <fullName>Banner</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Lamination</fullName>
            </value>
            <value>
                <fullName>Velcro</fullName>
            </value>
            <value>
                <fullName>Tape</fullName>
            </value>
            <value>
                <fullName>Fabric</fullName>
            </value>
            <value>
                <fullName>Foam Board</fullName>
            </value>
            <value>
                <fullName>Backlit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>