force-app/main/default/objects/Material_Item__c/fields/Min__c.field-meta.xml
<CustomField>
    <fullName>Min__c</fullName>
    <label>Min</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>