force-app/main/default/objects/Material_Item__c/fields/Mt_Status__c.field-meta.xml
<CustomField>
    <fullName>Mt_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>In Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>