force-app/main/default/objects/Material_Item__c/fields/Price_Each__c.field-meta.xml
<CustomField>
    <fullName>Price_Each__c</fullName>
    <label>Price Each</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>