force-app/main/default/objects/Material_Item__c/fields/Price_Per_M__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_M__c</fullName>
    <label>Price (Per M)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>