force-app/main/default/objects/Material_Item__c/fields/Qty_On_Hand__c.field-meta.xml
<CustomField>
    <fullName>Qty_On_Hand__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Qty On Hand</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>