force-app/main/default/objects/Material_Item__c/fields/Rack__c.field-meta.xml
<CustomField>
    <fullName>Rack__c</fullName>
    <label>Rack</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
            </value>
            <value>
                <fullName>002</fullName>
            </value>
            <value>
                <fullName>003</fullName>
            </value>
            <value>
                <fullName>004</fullName>
            </value>
            <value>
                <fullName>005</fullName>
            </value>
            <value>
                <fullName>006</fullName>
            </value>
            <value>
                <fullName>007</fullName>
            </value>
            <value>
                <fullName>008</fullName>
            </value>
            <value>
                <fullName>009</fullName>
            </value>
            <value>
                <fullName>010</fullName>
            </value>
            <value>
                <fullName>011</fullName>
            </value>
            <value>
                <fullName>012</fullName>
            </value>
            <value>
                <fullName>013</fullName>
            </value>
            <value>
                <fullName>014</fullName>
            </value>
            <value>
                <fullName>015</fullName>
            </value>
            <value>
                <fullName>016</fullName>
            </value>
            <value>
                <fullName>017</fullName>
            </value>
            <value>
                <fullName>018</fullName>
            </value>
            <value>
                <fullName>019</fullName>
            </value>
            <value>
                <fullName>020</fullName>
            </value>
            <value>
                <fullName>021</fullName>
            </value>
            <value>
                <fullName>022</fullName>
            </value>
            <value>
                <fullName>023</fullName>
            </value>
            <value>
                <fullName>024</fullName>
            </value>
            <value>
                <fullName>025</fullName>
            </value>
            <value>
                <fullName>026</fullName>
            </value>
            <value>
                <fullName>027</fullName>
            </value>
            <value>
                <fullName>028</fullName>
            </value>
            <value>
                <fullName>029</fullName>
            </value>
            <value>
                <fullName>030</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>