force-app/main/default/objects/Material_Item__c/fields/Shipping_Location__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Location__c</fullName>
    <label>Shipping Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2208</fullName>
            </value>
            <value>
                <fullName>312</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>