force-app/main/default/objects/Material_Item__c/fields/Store_Type__c.field-meta.xml
<CustomField>
    <fullName>Store_Type__c</fullName>
    <label>Client Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BioDiesel</fullName>
            </value>
            <value>
                <fullName>AccuDate</fullName>
            </value>
            <value>
                <fullName>Advantage</fullName>
            </value>
            <value>
                <fullName>All Shops</fullName>
            </value>
            <value>
                <fullName>All Stores</fullName>
            </value>
            <value>
                <fullName>Arby&apos;s</fullName>
            </value>
            <value>
                <fullName>B18</fullName>
            </value>
            <value>
                <fullName>B5</fullName>
            </value>
            <value>
                <fullName>Baskets</fullName>
            </value>
            <value>
                <fullName>BBQ</fullName>
            </value>
            <value>
                <fullName>Beer Draft</fullName>
            </value>
            <value>
                <fullName>BTC</fullName>
            </value>
            <value>
                <fullName>Bump Bar</fullName>
            </value>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Carl&apos;s Jr.</fullName>
            </value>
            <value>
                <fullName>Chester&apos;s</fullName>
            </value>
            <value>
                <fullName>CMN Footballs</fullName>
            </value>
            <value>
                <fullName>CNG</fullName>
            </value>
            <value>
                <fullName>Country Stores</fullName>
            </value>
            <value>
                <fullName>CS/TS/Speedco</fullName>
            </value>
            <value>
                <fullName>Curtis</fullName>
            </value>
            <value>
                <fullName>DEF</fullName>
            </value>
            <value>
                <fullName>Deposit Bag Dual</fullName>
            </value>
            <value>
                <fullName>Deposit Bag Single</fullName>
            </value>
            <value>
                <fullName>DM Only</fullName>
            </value>
            <value>
                <fullName>Dog Park</fullName>
            </value>
            <value>
                <fullName>EBT</fullName>
            </value>
            <value>
                <fullName>Empanada</fullName>
            </value>
            <value>
                <fullName>EM Production</fullName>
            </value>
            <value>
                <fullName>Encore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>