force-app/main/default/objects/Material_Item__c/fields/Supplier_No__c.field-meta.xml
<CustomField>
    <fullName>Supplier_No__c</fullName>
    <label>Supplier No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>