force-app/main/default/objects/Material_Item__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <formula>Price_Each__c  * 0.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>