force-app/main/default/objects/Material_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Item Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>CNG</fullName>
            </value>
            <value>
                <fullName>Banners</fullName>
            </value>
            <value>
                <fullName>Forms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>