force-app/main/default/objects/Material_Item__c/fields/Width_inches__c.field-meta.xml
<CustomField>
    <fullName>Width_inches__c</fullName>
    <label>Width (inches)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>