force-app/main/default/objects/Material_Item__c/recordTypes/Sheet.recordType-meta.xml
<RecordType>
    <fullName>Sheet</fullName>
    <active>true</active>
    <label>Sheet</label>
</RecordType>