force-app/main/default/objects/Material_Item__c/recordTypes/Size.recordType-meta.xml
<RecordType>
    <fullName>Size</fullName>
    <active>true</active>
    <label>Size</label>
</RecordType>